--- a/malibu.html
+++ b/malibu.html
@@ -14,12 +14,12 @@ middle-photo-link: /vista-ridge-malibu/ridge2.jpg
 middle-photo: /vista-ridge-malibu/ridge2.jpg
 right-photo-link: /vista-ridge-malibu/ridge3.jpg
 right-photo: /vista-ridge-malibu/ridge3.jpg
-full-image-1: /vista-ridge-malibu/ridge0.jpg
-full-image-2: /vista-ridge-malibu/bottom1.jpg
-full-image-3: /vista-ridge-malibu/bottom2.jpg
-full-image-4: /vista-ridge-malibu/bottom3.jpg
-full-image-5: /vista-ridge-malibu/bottom4.jpg
-full-image-6: /vista-ridge-malibu/bottom5.jpg
-full-image-7: /vista-ridge-malibu/bottom6.jpg
-full-image-8: /vista-ridge-malibu/bottom7.jpg
+full-1_image: /vista-ridge-malibu/ridge0.jpg
+full-2_image: /vista-ridge-malibu/bottom1.jpg
+full-3_image: /vista-ridge-malibu/bottom2.jpg
+full-4_image: /vista-ridge-malibu/bottom3.jpg
+full-5_image: /vista-ridge-malibu/bottom4.jpg
+full-6_image: /vista-ridge-malibu/bottom5.jpg
+full-7_image: /vista-ridge-malibu/bottom6.jpg
+full-8_image: /vista-ridge-malibu/bottom7.jpg
 ---
