--- a/malibu.html
+++ b/malibu.html
@@ -11,9 +11,9 @@ location: Malibu, CA
 left-photo-link: /vista-ridge-malibu/ridge1.jpg
 left-photo_image: /vista-ridge-malibu/ridge1.jpg
 middle-photo-link: /vista-ridge-malibu/ridge2.jpg
-middle-photo: /vista-ridge-malibu/ridge2.jpg
+middle-photo_image: /vista-ridge-malibu/ridge2.jpg
 right-photo-link: /vista-ridge-malibu/ridge3.jpg
-right-photo: /vista-ridge-malibu/ridge3.jpg
+right-photo_image: /vista-ridge-malibu/ridge3.jpg
 full-1_image: /vista-ridge-malibu/ridge0.jpg
 full-2_image: /vista-ridge-malibu/bottom1.jpg
 full-3_image: /vista-ridge-malibu/bottom2.jpg
