--- a/barryknoll-california-3933.html
+++ b/barryknoll-california-3933.html
@@ -9,17 +9,17 @@ meta-social-description: Beautiful homes in Los Angeles, with stunning exterior 
 project-name: 3933 Barryknoll Drive
 location: Los Angeles, CA
 left-photo-link: /barryknoll-california-3933/barryknoll2.jpg
-left-photo: /barryknoll-california-3933/barryknoll2.jpg
+left-photo_image: /barryknoll-california-3933/barryknoll2.jpg
 middle-photo-link: /barryknoll-california-3933/barryknoll.jpg
-middle-photo: /barryknoll-california-3933/barryknoll.jpg
+middle-photo_image: /barryknoll-california-3933/barryknoll.jpg
 right-photo-link: /barryknoll-california-3933/barryknoll3.jpg
-right-photo: /barryknoll-california-3933/barryknoll3.jpg
-full-image-1: /barryknoll-california-3933/bottom7.jpg
-full-image-2: /barryknoll-california-3933/bottom.jpg
-full-image-3: /barryknoll-california-3933/bottom2.jpg
-full-image-4: /barryknoll-california-3933/bottom3.jpg
-full-image-5: /barryknoll-california-3933/bottom4.jpg
-full-image-6: /barryknoll-california-3933/bottom5.jpg
-full-image-7: /barryknoll-california-3933/bottom6.jpg
-full-image-8: /barryknoll-california-3933/bottom8.jpg
+right-photo_image: /barryknoll-california-3933/barryknoll3.jpg
+full-1_image: /barryknoll-california-3933/bottom7.jpg
+full-2_image: /barryknoll-california-3933/bottom.jpg
+full-3_image: /barryknoll-california-3933/bottom2.jpg
+full-4_image: /barryknoll-california-3933/bottom3.jpg
+full-5_image: /barryknoll-california-3933/bottom4.jpg
+full-6_image: /barryknoll-california-3933/bottom5.jpg
+full-7_image: /barryknoll-california-3933/bottom6.jpg
+full-8_image: /barryknoll-california-3933/bottom8.jpg
 ---
