--- a/barryknoll-drive-3927.html
+++ b/barryknoll-drive-3927.html
@@ -10,17 +10,17 @@ project-name: Barryknoll Drive 3927
 main-paragraph: Barryknoll Drive 3927
 location: Los Angeles, CA
 left-photo-link: /barryknoll-california/barryknoll1.jpg
-left-photo: /barryknoll-california/barryknoll1.jpg
+left-photo_image: /barryknoll-california/barryknoll1.jpg
 middle-photo-link: /barryknoll-california/barryknoll2.jpg
-middle-photo: /barryknoll-california/barryknoll2.jpg
+middle-photo_image: /barryknoll-california/barryknoll2.jpg
 right-photo-link: /barryknoll-california/barryknoll3.jpg
-right-photo: /barryknoll-california/barryknoll3.jpg
-full-image-1: /barryknoll-california/bottom1.jpg
-full-image-2: /barryknoll-california/barryknoll0.jpg
-full-image-3: /barryknoll-california/bottom2.jpg
-full-image-4: /barryknoll-california/bottom3.jpg
-full-image-5: /barryknoll-california/bottom4.jpg
-full-image-6: /barryknoll-california/bottom5.jpg
-full-image-7: /barryknoll-california/bottom6.jpg
-full-image-8: /barryknoll-california/bottom7.jpg
+right-photo_image: /barryknoll-california/barryknoll3.jpg
+full-1_image: /barryknoll-california/bottom1.jpg
+full-2_image: /barryknoll-california/barryknoll0.jpg
+full-3_image: /barryknoll-california/bottom2.jpg
+full-4_image: /barryknoll-california/bottom3.jpg
+full-5_image: /barryknoll-california/bottom4.jpg
+full-6_image: /barryknoll-california/bottom5.jpg
+full-7_image: /barryknoll-california/bottom6.jpg
+full-8_image: /barryknoll-california/bottom7.jpg
 ---
