--- a/beckman-road-3060.html
+++ b/beckman-road-3060.html
@@ -9,17 +9,17 @@ meta-social-description: Beautiful homes in Los Angeles, with stunning exterior 
 project-name: 3060 Beckman Road
 location: Los Angeles, CA
 left-photo-link: /beckman-losangeles/beckman1.jpg
-left-photo: /beckman-losangeles/beckman1.jpg
+left-photo_image: /beckman-losangeles/beckman1.jpg
 middle-photo-link: beckman-losangeles/beckman2.jpg
-middle-photo: /beckman-losangeles/beckman2.jpg
+middle-photo_image: /beckman-losangeles/beckman2.jpg
 right-photo-link: /beckman-losangeles/beckman3.jpg
-right-photo: /beckman-losangeles/beckman3.jpg
-full-image-1: /beckman-losangeles/bottom7.jpg
-full-image-2: /beckman-losangeles/bottom0.jpg
-full-image-3: /beckman-losangeles/bottom2.jpg
-full-image-4: /beckman-losangeles/bottom3.jpg
-full-image-5: /beckman-losangeles/bottom4.jpg
-full-image-6: /beckman-losangeles/bottom5.jpg
-full-image-7: /beckman-losangeles/bottom6.jpg
-full-image-8: /beckman-losangeles/bottom8.jpg
+right-photo_image: /beckman-losangeles/beckman3.jpg
+full-1: /beckman-losangeles/bottom7.jpg
+full-2: /beckman-losangeles/bottom0.jpg
+full-3: /beckman-losangeles/bottom2.jpg
+full-4: /beckman-losangeles/bottom3.jpg
+full-5: /beckman-losangeles/bottom4.jpg
+full-6: /beckman-losangeles/bottom5.jpg
+full-7: /beckman-losangeles/bottom6.jpg
+full-8: /beckman-losangeles/bottom8.jpg
 ---
