--- a/ocean-view-drive.html
+++ b/ocean-view-drive.html
@@ -9,17 +9,17 @@ meta-social-description: Beautiful homes in Los Angeles, with stunning exterior 
 project-name: 26600 Ocean View Drive
 location: Malibu, CA
 left-photo-link: /ocean-view-malibu/oceanview1.jpg
-left-photo: /ocean-view-malibu/oceanview1.jpg
+left-photo_image: /ocean-view-malibu/oceanview1.jpg
 middle-photo-link: /ocean-view-malibu/oceanview2.jpg
-middle-photo: /ocean-view-malibu/oceanview2.jpg
+middle-photo_image: /ocean-view-malibu/oceanview2.jpg
 right-photo-link: /ocean-view-malibu/bottom1.jpg
-right-photo: /ocean-view-malibu/bottom1.jpg
-full-image-1: /ocean-view-malibu/bottom4.jpg
-full-image-2: /ocean-view-malibu/bottom0.jpg
-full-image-3: /ocean-view-malibu/bottom7.jpg
-full-image-4: /ocean-view-malibu/bottom2.jpg
-full-image-5: /ocean-view-malibu/bottom3.jpg
-full-image-6: /ocean-view-malibu/bottom5.jpg
-full-image-7: /ocean-view-malibu/bottom6.jpg
-full-image-8: /ocean-view-malibu/oceanview3.jpg
+right-photo_image: /ocean-view-malibu/bottom1.jpg
+full-1_image: /ocean-view-malibu/bottom4.jpg
+full-2_image: /ocean-view-malibu/bottom0.jpg
+full-3_image: /ocean-view-malibu/bottom7.jpg
+full-4_image: /ocean-view-malibu/bottom2.jpg
+full-5_image: /ocean-view-malibu/bottom3.jpg
+full-6_image: /ocean-view-malibu/bottom5.jpg
+full-7_image: /ocean-view-malibu/bottom6.jpg
+full-7_image: /ocean-view-malibu/oceanview3.jpg
 ---
