--- a/barryknoll-california-3933.html
+++ b/barryknoll-california-3933.html
@@ -4,7 +4,7 @@ title: 3933 Barryknoll Drive | Construction by Vista Enterprise, Inc
 meta-site-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
 twitter-title: 3933 Barryknoll Drive | Construction by Vista Enterprise, Inc
 featured-image_path: /barryknoll-california/barryknoll1.jpg
-url:
+url: https://vistaenterpriseinc.us/barryknoll-california-3933
 meta-social-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
 project-name: 3933 Barryknoll Drive
 location: Los Angeles, CA
