--- a/barryknoll-drive-3927.html
+++ b/barryknoll-drive-3927.html
@@ -4,7 +4,7 @@ title: 3927 Barryknoll Drive | Construction by Vista Enterprise, Inc
 meta-site-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
 twitter-title: 3927 Barryknoll Drive | Construction by Vista Enterprise, Inc
 featured-image_path: /barryknoll-california/barryknoll1.jpg
-url:
+url: https://vistaenterpriseinc.us/barryknoll-drive-3927
 meta-social-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
 project-name: Barryknoll Drive 3927
 main-paragraph: Barryknoll Drive 3927
