--- a/beckman-road-3060.html
+++ b/beckman-road-3060.html
@@ -4,7 +4,7 @@ title: 3060 Beckman Roa | Construction by Vista Enterprise, Inc
 meta-site-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
 twitter-title: 3060 Beckman Roa | Construction by Vista Enterprise, Inc
 featured-image_path: /beckman-losangeles/beckman1.jpg
-url:
+url: https://vistaenterpriseinc.us/beckman-road-3060
 meta-social-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
 project-name: 3060 Beckman Road
 location: Los Angeles, CA
