--- a/ocean-view-drive.html
+++ b/ocean-view-drive.html
@@ -4,7 +4,7 @@ title: 2210 Ridge Drive | Construction by Vista Enterprise, Inc
 meta-site-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
 twitter-title: 2210 Ridge Drive  | Construction by Vista Enterprise, Inc
 featured-image_path: /ocean-view-malibu/oceanview1.jpg
-url:
+url: https://vistaenterpriseinc.us/ocean-view-drive
 meta-social-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
 project-name: 26600 Ocean View Drive
 location: Malibu, CA
