--- a/contact/index.html
+++ b/contact/index.html
@@ -5,7 +5,7 @@ meta-site-description: Contact Vista Enterprise, Inc | a construction company in
 twitter-title: Vista Enterprise | Contact
 featured-image_path: /vista-ridge-malibu/ridge1.jpg
 meta-social-description: Contact Vista Enterprise, Inc | a construction company in LA
-url:
+url: https://vistaenterpriseinc.us/contact
 meta-twitter-description: Contact Vista Enterprise, Inc a complete design and full-service construction, development and investment firm for both residential and commercial builds in Los Angeles, CA
 ---
 
@@ -19,7 +19,7 @@ meta-twitter-description: Contact Vista Enterprise, Inc a complete design and fu
             <h2 class="sm-bold editable"> Let's get in Touch </h2>
           </div>
           <div class="col-10_sm-12 light-bg padded-2">
-            <h3>Basics</h3>
+            <h3 class="editable">Basics</h3>
             <div class="floating-input">
               <input type="text" name="name" placeholder="Your Name" class="input-text" required="">
               <label class="input-label"><br></label>
@@ -37,7 +37,7 @@ meta-twitter-description: Contact Vista Enterprise, Inc a complete design and fu
         <div>
         <div class="grid-center padded">
           <div class="col-10_sm-12">
-            <h3 class="sm-bold">How can we help? </h3>
+            <h3 class="sm-bold editable">How can we help? </h3>
             <div class="floating-input">
               <select name="options" id="options" required="">
                 <option value="Interest">What are you interested in? </option>
