--- a/beckman-road-3060.html
+++ b/beckman-road-3060.html
@@ -14,12 +14,12 @@ middle-photo-link: beckman-losangeles/beckman2.jpg
 middle-photo_image: /beckman-losangeles/beckman2.jpg
 right-photo-link: /beckman-losangeles/beckman3.jpg
 right-photo_image: /beckman-losangeles/beckman3.jpg
-full-1: /beckman-losangeles/bottom7.jpg
-full-2: /beckman-losangeles/bottom0.jpg
-full-3: /beckman-losangeles/bottom2.jpg
-full-4: /beckman-losangeles/bottom3.jpg
-full-5: /beckman-losangeles/bottom4.jpg
-full-6: /beckman-losangeles/bottom5.jpg
-full-7: /beckman-losangeles/bottom6.jpg
-full-8: /beckman-losangeles/bottom8.jpg
+full-1_image: /beckman-losangeles/bottom7.jpg
+full-2_image: /beckman-losangeles/bottom0.jpg
+full-3_image: /beckman-losangeles/bottom2.jpg
+full-4_image: /beckman-losangeles/bottom3.jpg
+full-5_image: /beckman-losangeles/bottom4.jpg
+full-6_image: /beckman-losangeles/bottom5.jpg
+full-7_image: /beckman-losangeles/bottom6.jpg
+full-8_image: /beckman-losangeles/bottom8.jpg
 ---
