--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ meta-social-description: Vista Enterprise, Inc based in Los Angeles, CA is a com
 url: https://vistaenterpriseinc.us
 meta-twitter-description: Vista Enterprise, Inc based in Los Angeles, CA is a complete design and full-service construction, development and investment firm for both residential and commercial builds
 banner_image: /images/banner2-sm.jpg
-story: /images/team-sm.jpg
+story_image: /images/team-sm.jpg
 ---
 
 <!-- banner -->
@@ -73,7 +73,7 @@ story: /images/team-sm.jpg
 <section id="story" class="light-bg grid-center padded">
     <h2 class="col-12 centered fadein editable"> Our Story </h2>
   <div class="grid padded flex-flip">
-    <div class="col-5_sm-12 bg-image-mob-banner"style="background-image:url({{page.story}}">
+    <div class="col-5_sm-12 bg-image-mob-banner"style="background-image:url({{page.story_image}}">
     <div class="col-7_sm-12-middle padded-mob-non">
       <h4 class="subtle-heading fadein editable"> It started with fascination </h4>
       <h3 class="fadein editable"> An architect at 12-years-old</h3>
@@ -82,7 +82,7 @@ story: /images/team-sm.jpg
       <p class="editable"> <span class="fadein"> After graduating from architectural engineering School Raymond Munro started working for The Pacific Stock Exchange.</span><span class="fadein"> It was there that he acquired business administration and managerial experience, equipping him to obtain the know-how to invest in the stock market. </span><span class="fadein">All which facilitated his long term goal⎯establishing his own Hillside Investment, development and construction firm.</span></p>
 
       <p class="editable"><span class="fadein">Vista Enterprise, Inc. was founded 35 years ago with the purpose of building beautiful homes by offering all services related to construction. </span><span class="fadein">Having a firm understanding of the process from start to finish not only speeds up the project time, but also makes sure every requirement for each stage is complete before moving forward.</span></p>
-
+      </div>
     </div>
   </div>
 </section>
