Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 ---
 layout: default
-title: Vista Enterprise Inc | Full-service construction and development firm
+title: Vista Enterprise Inc | service construction and development firm
 meta-site-description: >-
   Vista Enterprise, Inc based in Los Angeles, CA is a complete design and
   full-service construction, development and investment firm for both
   residential and commercial builds
 twitter-title: Full-service construction and development firm
 featured-image_path: /images/banner2-sm.jpg
-meta-social-description: Vista Enterprise, Inc based in Los Angeles, CA is a complete design and full-service construction, development and investment firm for both residential and commercial builds
-url: https://vistaenterpriseinc.us
-meta-twitter-description: Vista Enterprise, Inc based in Los Angeles, CA is a complete design and full-service construction, development and investment firm for both residential and commercial builds
+meta-social-description: >-
+  Vista Enterprise, Inc based in Los Angeles, CA is a complete design and
+  full-service construction, development and investment firm for both
+  residential and commercial builds
+url: 'https://vistaenterpriseinc.us'
+meta-twitter-description: >-
+  Vista Enterprise, Inc based in Los Angeles, CA is a complete design and
+  full-service construction, development and investment firm for both
+  residential and commercial builds
 banner_image: /images/banner2-sm.jpg
 story_image: /images/team-sm.jpg
 ---
@@ -73,7 +79,7 @@ story_image: /images/team-sm.jpg
 <section id="story" class="light-bg grid-center padded">
     <h2 class="col-12 centered fadein editable"> Our Story </h2>
   <div class="grid padded flex-flip">
-    <div class="col-5_sm-12 bg-image-mob-banner"style="background-image:url({{page.story_image}}">
+    <div class="col-5_sm-12 bg-image-mob-banner" style="background-image:url({{page.story_image}}">
     </div>
     <div class="col-7_sm-12-middle padded-mob-non">
       <h4 class="subtle-heading fadein editable"> It started with fascination </h4>
