Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Vista Enterprise Inc | service construction and development firm
+title: Vista Enterprise Inc |Full-service construction and development firm
 meta-site-description: >-
   Vista Enterprise, Inc based in Los Angeles, CA is a complete design and
   full-service construction, development and investment firm for both
