Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Vista Enterprise Inc |Full-service construction and development firm
+title: Vista Enterprise Inc | service construction and development firm
 meta-site-description: >-
   Vista Enterprise, Inc based in Los Angeles, CA is a complete design and
   full-service construction, development and investment firm for both
@@ -23,7 +23,7 @@ story_image: /images/team-sm.jpg
 <!-- banner -->
 <section class="banner grid-center" style="background-image:url({{page.banner_image}}">
   <div class="col-10_sm-12-middle centered editable">
-    <h1 class="big-bold">service construction and development firm</h1>
+    <h1 class="big-bold">full-service construction and development firm</h1>
     <h3 class="sub-heading">in Los Angeles, CA</h3>
   </div>
 </section>
@@ -34,11 +34,11 @@ story_image: /images/team-sm.jpg
     About Vista
   </h2>
   <p class="left padded-sides editable">
-    <span class="fadein">Vista Enterprise, Inc. based in Sunny Los Angeles, delivers high quality building projects, specializing in hillside construction, detailing and space planning.</span> <span class="fadein">Vista Enterprise, Inc. is a complete design, full-service construction company and development firm for both residential and commercial builds in Los Angeles.</span> <span class="fadein">As a full-service complete construction and development firm, we cater for all building needs from the ground up.</span><span class="fadein"> Whether you are interested in building your dream home, property investment, renovations,</span> <span class="fadein">remodelling, structural concrete, custom exterior finishes or even structural framing⎯Vista Enterprise, Inc. is able to assist you.</span>
+    <span class="fadein" style="opacity: 1;">Vista Enterprise, Inc. based in Sunny Los Angeles, delivers high quality building projects, specializing in hillside construction, detailing and space planning.</span> <span class="fadein" style="opacity: 1;">Vista Enterprise, Inc. is a complete design, full-service construction company and development firm for both residential and commercial builds in Los Angeles.</span> <span class="fadein" style="opacity: 1;">As a full-service complete construction and development firm, we cater for all building needs from the ground up.</span><span class="fadein" style="opacity: 1;"> Whether you are interested in building your dream home, property investment, renovations,</span> <span class="fadein" style="opacity: 1;">remodelling, structural concrete, custom exterior finishes or even structural framing⎯Vista Enterprise, Inc. is able to assist you.</span>
   </p>
 
   <p class="left padded-sides editable">
-    <span class="fadein">Over the last 35 years, Vista Enterprise, Inc. has served the greater Los Angeles area with a vital service that has contributed to what California is known for today⎯rich architecture, luxury lifestyle and a cities built on dream homes and high-end commercial offices.<br /><span class="fadein">With all the years of experience, we have become leaders and specialists in hillside construction, detailing and space planning.<span class="fadein"></span></span></span>
+    <span class="fadein" style="opacity: 1;">Over the last 35 years, Vista Enterprise, Inc. has served the greater Los Angeles area with a vital service that has contributed to what California is known for today⎯rich architecture, luxury lifestyle and a cities built on dream homes and high-end commercial offices.<br /><span class="fadein" style="opacity: 1;">With all the years of experience, we have become leaders and specialists in hillside construction, detailing and space planning.<span class="fadein" style="opacity: 1;"></span></span></span>
   </p>
 
   <p class="left fadein padded-sides editable">
@@ -58,7 +58,7 @@ story_image: /images/team-sm.jpg
         Hillside Construction
       </h4>
       <p class="left editable">
-        <span class="fadein">When it comes to hillside construction⎯and the complexities that are involved⎯you need the best for the job.</span><span class="fadein"> Vista Enterprise, Inc. are leading experts in hillside construction with 35+ years experience, serving the earthquake prone greater Los Angeles area.</span><span class="fadein"> Hillside construction includes building retaining walls, earthquake retrofitting, hillside stabilization, house bolting, and construction of concrete reinforcements and grade beams.</span>
+        <span class="fadein" style="opacity: 1;">When it comes to hillside construction⎯and the complexities that are involved⎯you need the best for the job.</span><span class="fadein" style="opacity: 1;"> Vista Enterprise, Inc. are leading experts in hillside construction with 35+ years experience, serving the earthquake prone greater Los Angeles area.</span><span class="fadein"> Hillside construction includes building retaining walls, earthquake retrofitting, hillside stabilization, house bolting, and construction of concrete reinforcements and grade beams.</span>
       </p>
     </div>
     <div class="col-4_sm-12 padded-1">
@@ -67,7 +67,7 @@ story_image: /images/team-sm.jpg
         Structual Framing
       </h4>
       <p class="left editable">
-        <span class="fadein">Every custom home or new build is unique and comes with its own architectural needs.</span><span class="fadein"> At Vista Enterprise, Inc., our many years of experience enables us to problem solve, efficiently and effectively. </span><span class="fadein">To ensure the success of this critical component of the construction process, our motto is resilience, reliability and durability⎯a construction company in Los Angeles, CA that</span><span class="fadein"> incorporates a step-by-step process ensuring that every detail will be taken care of with the highest degree of care.</span>
+        <span class="fadein" style="opacity: 1;">Every custom home or new build is unique and comes with its own architectural needs.</span><span class="fadein" style="opacity: 1;"> At Vista Enterprise, Inc., our many years of experience enables us to problem solve, efficiently and effectively. </span><span class="fadein">To ensure the success of this critical component of the construction process, our motto is resilience, reliability and durability⎯a construction company in Los Angeles, CA that</span><span class="fadein"> incorporates a step-by-step process ensuring that every detail will be taken care of with the highest degree of care.</span>
       </p>
     </div>
     <div class="col-4_sm-12 padded-1">
@@ -76,7 +76,7 @@ story_image: /images/team-sm.jpg
         Commercial and residential development
       </h4>
       <p class="left editable">
-        <span class="fadein">Whether you own a business in Los Angeles, CA or planning on building your dream home, Vista Enterprise, Inc. understands the needs of every project, and communicates each step of the build.</span><span class="fadein"> If you're looking for a ground up build or a re-modelling project, we take into consideration what the space will be used for so it can be fully optimized.</span><span class="fadein"> We're a construcion company in Los Angeles that take into account timelines, feasibility and budget while never compromising on aesthetic beauty.</span>
+        <span class="fadein" style="opacity: 1;">Whether you own a business in Los Angeles, CA or planning on building your dream home, Vista Enterprise, Inc. understands the needs of every project, and communicates each step of the build.</span><span class="fadein"> If you're looking for a ground up build or a re-modelling project, we take into consideration what the space will be used for so it can be fully optimized.</span><span class="fadein"> We're a construcion company in Los Angeles that take into account timelines, feasibility and budget while never compromising on aesthetic beauty.</span>
       </p>
     </div>
     <div class="col-4_sm-12 padded-1">
