Updated 'barryknoll-california-3933.html' via CloudCannon

--- a/barryknoll-california-3933.html
+++ b/barryknoll-california-3933.html
@@ -1,13 +1,13 @@
 ---
 layout: projects
-title: 3933 Barryknoll Drive | Construction by Vista Enterprise, Inc
-meta-site-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
-twitter-title: 3933 Barryknoll Drive | Construction by Vista Enterprise, Inc
-featured-image_path: /barryknoll-california/barryknoll1.jpg
-url: https://vistaenterpriseinc.us/barryknoll-california-3933
-meta-social-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
+title: '3933 Barryknoll Drive | Construction by Vista Enterprise, Inc'
+meta-site-description: 'Beautiful homes in Los Angeles, with stunning exterior and interior finishes.'
+twitter-title: '3933 Barryknoll Drive | Construction by Vista Enterprise, Inc'
+featured-image_path: /barryknoll-california-3933/barryknoll.png
+url: 'https://vistaenterpriseinc.us/barryknoll-california-3933'
+meta-social-description: 'Beautiful homes in Los Angeles, with stunning exterior and interior finishes.'
 project-name: 3933 Barryknoll Drive
-location: Los Angeles, CA
+location: 'Los Angeles, CA'
 left-photo-link: /barryknoll-california-3933/barryknoll2.jpg
 left-photo_image: /barryknoll-california-3933/barryknoll2.jpg
 middle-photo-link: /barryknoll-california-3933/barryknoll.jpg
@@ -23,3 +23,4 @@ full-6_image: /barryknoll-california-3933/bottom5.jpg
 full-7_image: /barryknoll-california-3933/bottom6.jpg
 full-8_image: /barryknoll-california-3933/bottom8.jpg
 ---
+
