Updated 2 files via CloudCannon

--- a/beckman-road-3060.html
+++ b/beckman-road-3060.html
@@ -1,6 +1,6 @@
 ---
 layout: projects
-title: 3060 Beckman Roa | Construction by Vista Enterprise, Inc
+title: 3060 Beckman Road | Construction by Vista Enterprise, Inc
 meta-site-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
 twitter-title: 3060 Beckman Roa | Construction by Vista Enterprise, Inc
 featured-image_path: /beckman-losangeles/beckman1.jpg
@@ -23,3 +23,4 @@ full-6_image: /beckman-losangeles/bottom5.jpg
 full-7_image: /beckman-losangeles/bottom6.jpg
 full-8_image: /beckman-losangeles/bottom8.jpg
 ---
+
