Updated 'beckman-road-3060.html' via CloudCannon

--- a/beckman-road-3060.html
+++ b/beckman-road-3060.html
@@ -2,7 +2,7 @@
 layout: projects
 title: 3060 Beckman Road | Construction by Vista Enterprise, Inc
 meta-site-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
-twitter-title: 3060 Beckman Roa | Construction by Vista Enterprise, Inc
+twitter-title: 3060 Beckman Road | Construction by Vista Enterprise, Inc
 featured-image_path: /beckman-losangeles/beckman1.jpg
 url: https://vistaenterpriseinc.us/beckman-road-3060
 meta-social-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
