Updated 3 files via CloudCannon

--- a/projects/index.html
+++ b/projects/index.html
@@ -36,7 +36,10 @@ photo-6_image: /barryknoll-california-3933/barryknoll.jpg
 title-6: Los Angeles
 place-6: 3933 Barryknoll
 ---
+
 <section class="grid-center light-bg padded">
-  <div class= "col-8_sm-10 centered">
-  <p class="left editable"> Beautiful homes with breath taking panoramic ocean and mountain views. Gated estates perched high in the Hollywood hills.  Pieces of heaven in Malibu where celebrities call home. Serene vistas with soaring ceilings placed elegantly among mature orchards. Whether you are looking to invest in property, renovate an existing building or build your dream home from the ground up, Vista Enterprise, Inc is here to serve you. Take a look at a few of our recently completed projects in our gallery and feel free to contact us regarding any of your queries. </p>
-</section>
+  <div class="col-8_sm-10 centered">
+  <p class="left editable">
+    Beautiful homes with breath taking panoramic ocean and mountain views. Gated estates perched high in the Hollywood hills. Pieces of heaven in Malibu where celebrities call home. Serene vistas with soaring ceilings placed elegantly among mature orchards. Whether you are looking to invest in property, renovate an existing building or build your dream home from the ground up, Vista Enterprise, Inc is here to serve you. Take a look at a few of our recently completed projects in our gallery and feel free to contact us regarding any of your queries.
+  </p>
+</div></section>
